--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-light bg-faded">
+    <nav class="navbar bg-faded">
       <ul class="nav navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="#">Work</a>
         </li>
         <li class="nav-item">
@@ -23,7 +23,7 @@
       </ul>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid text-xs-center">
+    <div class="jumbotron jumbotron-fluid">
       <div class="container text-xs-center">
         <h1 class="display-3 m-t-3">James Barrett</h1>
         <hr>
