--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   </head>
 
   <body>
-    <nav class="navbar bg-faded">
+    <nav class="navbar bg-faded navbar-fixed-top">
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="#">Work</a>
@@ -23,25 +24,59 @@
       </ul>
     </nav>
 
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid no-margin-bottom">
       <div class="container text-xs-center">
-        <h1 class="display-3 m-t-3">James Barrett</h1>
+        <h1 class="display-3 m-t-1">James Barrett</h1>
         <hr>
         <p class="lead">Let's keep this simple. I am an aspiring Front-End Developer,
         lifelong learner and Arsenal sufferer. View my work below.</p>
+        <i class="fa fa-2x fa-chevron-down" aria-hidden="true"></i>
       </div>
     </div>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-4">
-          
+    <div class="container-fluid text-xs-center">
+      <div class="row no-gutter">
+        <div class="col-md-6 col-sm-12">
+          <div class="box">
+            <h2 class="m-t-3">FootDrive - Coming Soon!</h2>
+            <hr>
+            <p class="m-t-1">A social network for fans sharing lifts to football matches.</p>
+            <p>Built with HTML, CSS, JavaScript, PHP and SQL</p>
+            <button type="button" class="btn btn-secondary">Read more</button>
+            <button type="button" class="btn btn-primary">View on GitHub</button>
+          </div>
         </div>
-        <div class="col-sm-4">
-          One of three columns
+        <div class="col-md-6 col-sm-12">
+          <div class="box">
+            <h2 class="m-t-3">ThePokeRaf</h2>
+            <hr>
+            <p class="m-t-1">A simple website for a Pokemon Youtuber with over 10 Thousand Subscribers.</p>
+            <p>Built with HTML, CSS, jQuery and PHP.</p>
+            <button type="button" class="btn btn-secondary">Read more</button>
+            <button type="button" class="btn btn-primary">View on GitHub</button>
+          </div>
         </div>
-        <div class="col-sm-4">
-          One of three columns
+        <div class="col-md-6 col-sm-12">
+          <div class="box">
+            <h2 class="m-t-3">JacksonJacobDeveloper</h2>
+            <hr>
+            <p class="m-t-1 m-l-1">A portfolio website for a Computer Science undergraduate, Jackson Jacob, to showcase
+            all of his work.</p>
+            <p>Built with HTML, CSS, JavaScript and PHP.</p>
+            <button type="button" class="btn btn-secondary">Read more</button>
+            <button type="button" class="btn btn-primary">View on GitHub</button>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12">
+          <div class="box">
+            <h2 class="m-t-3">Weather App - Coming Soon!</h2>
+            <hr>
+            <p class="m-t-1 m-l-1">'Build a weather app challenge' on FreeCodeCamp, allowing the user to get the weather
+            in a particular area.</p>
+            <p>Built with HTML, CSS and JavaScript.</p>
+            <button type="button" class="btn btn-secondary">Read more</button>
+            <button type="button" class="btn btn-primary">View on GitHub</button>
+          </div>
         </div>
       </div>
     </div>
