--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!--Navigation-->
     <nav class="navbar bg-faded navbar-fixed-top">
       <ul class="nav navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Work</a>
+        <li class="nav-item p-x-1 large">
+          <a class="nav-link" href="#work">Work</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" data-toggle="modal" data-target="#contact">Contact</a>
+        <li class="nav-item p-x-1 large">
+          <a class="nav-link" data-toggle="modal" data-target="#contact">Contact</a>
         </li>
       </ul>
     </nav>
@@ -28,15 +28,16 @@
     <!--Jumbotron/Header-->
     <div class="jumbotron jumbotron-fluid no-margin-bottom">
       <div class="container text-xs-center">
-        <h1 class="display-3 m-t-1">James Barrett</h1>
-        <hr>
-        <p class="lead">Let's keep this simple. I am an aspiring Front-End Developer,
-        lifelong learner and Arsenal sufferer. View my work below. <a href="#" data-toggle="modal" data-target="#contact">Contact me here.</a></p>
-        <i class="fa fa-2x fa-chevron-down" aria-hidden="true"></i>
+        <h1 class="display-2 m-t-1 m-b-2 white">James Barrett</h1>
+        <p class="lead white">Let's keep this simple. I am an aspiring Front-End Developer,
+        lifelong learner and Arsenal sufferer. View my work below.</p>
+        <p class="lead white border"><a class="contact-link white" href="#" data-toggle="modal" data-target="#contact">Contact me here.</a></p>
+        <a href="#work"><i class="fa fa-2x fa-chevron-down" aria-hidden="true"></i></a>
       </div>
     </div>
 
-    <div class="container-fluid text-xs-center">
+    <!--Work-->
+    <div class="container-fluid text-xs-center" id="work">
       <div class="row no-gutter">
         <div class="col-md-6 col-sm-12">
           <div class="box p-x-3">
@@ -93,9 +94,9 @@
           </div>
           <div class="modal-body text-xs-center">
             <ul class="social-media">
-              <li class="m-x-2"><a href="https://twitter.com/james_barrett"><i class="fa fa-3x fa-twitter" aria-hidden="true"></i></a></li>
-              <li class="m-x-2"><a href="https://github.com/jamesbarrett95"><i class="fa fa-3x fa-github" aria-hidden="true"></i></a></li>
-              <li class="m-x-2"><a href="https://www.linkedin.com/in/jamesbarrett95?authType=NAME_SEARCH&authToken=KZYO&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A101657775%2CauthType%3ANAME_SEARCH%2Cidx%3A1-1-1%2CtarId%3A1472574298832%2Ctas%3Ajames%20barrett"><i class="fa fa-3x fa-linkedin" aria-hidden="true"></i></a></li>
+              <li class="m-x-2 large"><a href="https://twitter.com/james_barrett"><i class="fa fa-3x fa-twitter" aria-hidden="true"></i></a></li>
+              <li class="m-x-2 large"><a href="https://github.com/jamesbarrett95"><i class="fa fa-3x fa-github" aria-hidden="true"></i></a></li>
+              <li class="m-x-2 large"><a href="https://www.linkedin.com/in/jamesbarrett95?authType=NAME_SEARCH&authToken=KZYO&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A101657775%2CauthType%3ANAME_SEARCH%2Cidx%3A1-1-1%2CtarId%3A1472574298832%2Ctas%3Ajames%20barrett"><i class="fa fa-3x fa-linkedin" aria-hidden="true"></i></a></li>
             </ul>
             <hr class="modal-hr">
             <form action="#" method="post" id="contactform" name="contactform">
@@ -125,5 +126,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
+    <script src="js/functions.js"></script>
   </body>
 </html>
